# BevyScada

./: Cargo.toml
.github/workflows/: rust.yml
src/: device.rs  lib.rs  main.rs  no_main.rs  sensor.rs  session.rs  tag.rs  transport.rs
src/device/: owen.rs  register.rs
src/device/owen/: digital.rs
src/tag/: dozator.rs  sensor.rs
