[package]
name = "BevyScada"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy_app = "0.13.2"
bevy = { version = "0.13.2", default-features = false, features = ["multi-threaded"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

