[package]
name = "BevyScada"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy_app = "0.13.2"
bevy = { version = "0.13.2", default-features = false, features = ["multi-threaded"] }
derivative = "2.2.0"
derive_more = { version = "0.99.17", default-features = false, features = ["from", "from_str", "into", "as_ref", "as_mut", "into_iterator"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

